--- a/requirements.txt
+++ b/requirements.txt
@@ -2,3 +2,6 @@ requests>=2.28.0
 urllib3>=1.26.0
 snowflake-connector-python>=3.0.0
 google-cloud-secret-manager>=2.16.0
+pyacoustid>=1.2.0
+pandas>=1.5.0
+audioread>=3.0.0
