--- a/.gitignore
+++ b/.gitignore
@@ -47,10 +47,11 @@ Thumbs.db
 
 # Project specific
 downloads/
-test_downloads*/
 *.log
 *_results*.json
 debug_*.py
-test_*.py
 .ipynb_checkpoints
 samples
+
+# Analysis results
+analysis/results/
